Se añaden validaciones y se corrigen enpoints para conexión con otro ms